--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -2,30 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>About Us</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cosmo/bootstrap.min.css" integrity="sha384-5QFXyVb+lrCzdN228VS3HmzpiE7ZVwLQtkt+0d9W43LQMzz4HBnnqvVxKg6O+04d" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-
 </head>
 
 <body>
     <!--Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'djangoapp:about_us' %}">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'djangoapp:contact_us' %}">Contact Us</a>
+                        <a class="nav-link active" href="#">Contact Us</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -36,10 +28,19 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>  
 
-    <h2>This is the INDEX page of your Django app!</h2>
-    <!--Add a dealer table here -->
+    <h1>Have questions?</h1>
+
+    <h3><strong class="text-primary">For general inquiries</strong></h3>
+    <p>info@django.app<br>
+    1-987-654-3210</p>
+
+    <h3><strong class="text-primary">Headquarters</strong></h3>
+    <p>999 Django Street<br>
+        Coursera 2300<br>
+        The Moon</p>
+    
     
 </body>
 
