--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -8,10 +8,68 @@
 </head>
 
     <body>
-
-    <!--Add a nav bar here -->
+    <!--Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'djangoapp:about_us' %}">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'djangoapp:contact_us' %}">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <div style="margin: 10px;">
+                    <a class="btn btn-primary" href="{% url 'djangoapp:add_review' dealer.id %}"><b>Write a car review</b></a>
+                </div>
+                <li>
+                    <a class="btn btn-primary" href="#">{{ user.first_name }} ({{ user.username }})</a>
+                    <a class="btn btn-primary" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-primary" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
 
     <!-- Add reviews as cards -->
+    {% if reviews_list %}
+    <h1>The reviews are the following:</h1>
+        <div class="card-columns">
+            {% for review in reviews_list %}
+                <div class="card" style="height: 300px; overflow: scroll; overflow-x: hidden;">
+                    <img src="{{MEDIA_URL}}/emoji/{{review.sentiment}}.png" class="card-img-left" style="float: left; height: 40px; width: 40px; display: inline-block;">
+                    <div class="card-body" style="text-align: center;">
+                        <h4 class="card-title">Review</h4><br>
+
+                        {% if review.car_make %}
+                            <h5 class="card-title">{{ review.car_make }}, {{ review.car_model }}</h5>
+                        {% endif %}
+                        <h5 class="card-title">{{ review.car_year }}</h5>
+                        <p class="card-text" style="text-align: left;">{{ review.review }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <h1>There are no reviews for this dealership</h1>
+    {% endif %}
 
     </body>
 
