--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,6 +11,39 @@
 
 </head>
     <body>
-    <!--Add review form here -->
+        <h1>Add a review about {{dealer.full_name}}</h1>
+        <br>
+        <form action="{% url 'djangoapp:add_review' dealer.id%}" method="post">    
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="content"><b>Enter the review content:</b></label>
+                <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+            </div>
+            <div class="form-group form-check">
+                <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                <label for="purchasecheck">Has purchased the car from {{dealer.full_name}}?</label>
+            </div>
+            <div class="form-group">
+                <label for="car"><b>Select your car (model-make-year):</b></label>
+                <select name="car" id="car" class="form-select" required>
+                    {% for car in cars %}
+                        <option selected value={{car.id}}>{{car.car_make.name}} {{car.name}} {{ car.year }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group" data-provide="datepicker">
+                <label for="purchasedate">Select Your Purchase Date:</label>
+                <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
     </body>
+
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
+
 </html>
